Add Netlify commands to package.json

--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "start": "run-p start:**",
     "start:hugo": "hugo -d ../dist -s site -vw",
     "start:webpack": "webpack-dev-server --config webpack.dev.js --hot",
+    "start:netlify:dev": "netlify dev",
     "preview": "run-p preview:**",
     "preview:hugo": "npm run start:hugo -- -D -F",
     "preview:webpack": "npm run start:webpack",
+    "preview:netlify:dev": "npm run start:netlify:dev",
     "prebuild": "rimraf dist",
     "build": "npm run build:webpack && npm run build:hugo",
     "build:preview": "npm run build:webpack && npm run build:hugo:preview",
