--- a/package.json
+++ b/package.json
@@ -8,69 +8,23 @@
   },
   "main": "index.js",
   "scripts": {
-    "lint": "eslint src",
-    "start": "run-p start:**",
-    "start:hugo": "hugo -d ../dist -s site -vw",
-    "start:webpack": "webpack serve --config webpack.dev.js --hot",
-    "start:netlify:dev": "netlify dev",
-    "preview": "run-p preview:**",
-    "preview:hugo": "npm run start:hugo -- -D -F",
-    "preview:webpack": "npm run start:webpack",
-    "preview:netlify:dev": "npm run start:netlify:dev",
+    "start": "hugo server -D -s site",
     "prebuild": "rimraf dist",
-    "build": "npm run build:webpack && npm run build:hugo",
-    "build:preview": "npm run build:webpack && npm run build:hugo:preview",
-    "build:hugo": "hugo -d ../dist -s site -v",
-    "build:hugo:preview": "npm run build:hugo -- -D -F",
-    "build:webpack": "cross-env NODE_ENV=production webpack --config webpack.prod.js"
+    "build": "hugo -s site",
+    "build:preview": "hugo -D -s site"
   },
+  "keywords": [],
   "author": "",
   "license": "MIT",
-  "devDependencies": {
-    "@babel/core": "^7.12.3",
-    "@babel/plugin-proposal-object-rest-spread": "^7.12.1",
-    "@babel/plugin-syntax-object-rest-spread": "^7.8.3",
-    "@babel/preset-env": "^7.12.1",
-    "@babel/register": "^7.12.1",
-    "assets-webpack-plugin": "^3.9.7",
-    "babel-eslint": "^10.0.2",
-    "babel-loader": "^8.1.0",
-    "clean-webpack-plugin": "^3.0.0",
-    "copy-webpack-plugin": "^8.1.1",
-    "cross-env": "^5.2.0",
-    "css-loader": "^3.5.3",
-    "css-minimizer-webpack-plugin": "^2.0.0",
-    "eslint": "^6.7.2",
-    "eslint-plugin-import": "^2.22.1",
-    "exports-loader": "^0.7.0",
-    "fancy-log": "^1.3.2",
-    "file-loader": "^4.1.0",
-    "hugo-bin": "^0.63.0",
-    "imports-loader": "^0.8.0",
-    "mini-css-extract-plugin": "^0.12.0",
-    "node-sass": "^4.13.1",
-    "npm-run-all": "^4.1.5",
-    "plugin-error": "^1.0.1",
-    "postcss": "^8.2.12",
-    "postcss-import": "^14.0.1",
-    "postcss-loader": "^5.2.0",
-    "postcss-preset-env": "^6.7.0",
-    "rimraf": "^3.0.0",
-    "sass-loader": "^8.0.0",
-    "style-loader": "^1.3.0",
-    "terser-webpack-plugin": "^3.0.1",
-    "url-loader": "^2.1.0",
-    "webpack": "^5.35.1",
-    "webpack-cli": "^4.6.0",
-    "webpack-dev-server": "^3.11.2",
-    "webpack-merge": "^5.7.3",
-    "whatwg-fetch": "^3.0.0"
-  },
-  "resolutions": {
-    "natives": "1.1.6"
-  },
   "dependencies": {
     "cookie": "^0.4.1",
     "node-fetch": "^2.6.1"
+  },
+  "devDependencies": {
+    "hugo-bin": "^0.71.0",
+    "postcss": "^8.2.13",
+    "postcss-cli": "^8.3.1",
+    "postcss-import": "^14.0.1",
+    "rimraf": "^3.0.2"
   }
 }
