--- a/site/config.toml
+++ b/site/config.toml
@@ -7,3 +7,5 @@ title = "dewy"
 # See configuration options for more details: 
 # https://gohugo.io/getting-started/configuration/#toml-configuration
 disableKinds = ["RSS", "taxonomy", "taxonomyTerm"]
+
+publishdir = "../dist/"
