--- a/package.json
+++ b/package.json
@@ -18,9 +18,9 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "axios": "^0.25.0",
     "cookie": "^0.4.1",
     "milligram": "^1.4.1",
-    "node-fetch": "^2.6.7",
     "normalize.css": "^8.0.1"
   },
   "devDependencies": {
